feat: update email services

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ DRIP_API_KEY=""
 
 IMPULSER_APP_EXCHANGE=""
 
+MJ_APIKEY_PUBLIC=
+MJ_APIKEY_PRIVATE=
 MONGODB_URI="mongodb://localhost/atena-server"
 MONGODB_TEST_URI="mongodb://localhost/atena-test"
 MINER_EXCHANGE="miner.out"
