chore: change openedEmail envent source (#708)
* chore: change openedEmail envent source

* feat: update email services

--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,11 @@ DRIP_API_KEY=""
 
 IMPULSER_APP_EXCHANGE=""
 
+MJ_APIKEY_PUBLIC=
+MJ_APIKEY_PRIVATE=
 MONGODB_URI="mongodb://localhost/atena-server"
 MONGODB_TEST_URI="mongodb://localhost/atena-test"
+MINER_EXCHANGE="miner.out"
 
 NODE_ENV="development"
 
@@ -18,6 +21,7 @@ PORT=4390
 
 QUEUE_FOR_ENLISTMENT=""
 QUEUE_FOR_IMPULSER_APP=""
+QUEUR_FOR_MINER="miner.atena"
 
 REDIS_URL=""
 ROCKETCHAT_ADMIN_USER_ID=""
