chore: mailjet config

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ IMPULSER_APP_EXCHANGE=""
 
 MJ_APIKEY_PUBLIC=
 MJ_APIKEY_PRIVATE=
+MJ_ID_CONTACT_LIST=
 MONGODB_URI="mongodb://localhost/atena-server"
 MONGODB_TEST_URI="mongodb://localhost/atena-test"
 MINER_EXCHANGE="miner.out"
