--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "log-on-slack": "^1.1.1",
     "moment": "^2.29.1",
     "mongoose": "^5.11.13",
-    "node-cron": "^2.0.3",
-    "node-mailjet": "^3.3.1"
+    "node-mailjet": "^3.3.1",
+    "node-schedule": "^2.0.0"
   },
   "devDependencies": {
     "@sucrase/jest-plugin": "^2.0.0",
